--- a/index.html
+++ b/index.html
@@ -52,9 +52,17 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="burger-btn">
+          <svg class="burger">
+            <use
+              class="header-icon"
+              href="./images/symbol-defs.svg#icon-hamburger"
+            ></use>
+          </svg>
+        </button>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
@@ -516,7 +524,7 @@
           </button>
         </form>
       </div>
-    </footer>
+    </footer> -->
     <script src="./modal.js"></script>
   </body>
 </html>
