made adaptive index page and footer

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
           <svg class="burger">
             <use
               class="header-icon"
-              href="./images/symbol-defs.svg#icon-hamburger"
+              href="./images/symbol-defs.svg#icon-burger"
             ></use>
           </svg>
         </button>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">
@@ -74,6 +74,7 @@
           </button>
         </div>
       </section>
+
       <section class="section">
         <div class="container">
           <h2 class="section-title hiden">Features</h2>
@@ -129,6 +130,7 @@
           </ul>
         </div>
       </section>
+
       <section class="section about-section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
@@ -160,6 +162,7 @@
           </ul>
         </div>
       </section>
+
       <section class="section team-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -327,6 +330,7 @@
           </ul>
         </div>
       </section>
+
       <section class="section customer-section">
         <div class="container">
           <h2 class="section-title">Customers</h2>
@@ -460,9 +464,10 @@
         </div>
       </div>
     </main>
+
     <footer class="footer">
       <div class="container">
-        <div>
+        <div class="footer-info">
           <a href="./index.html" class="logo link"
             ><span class="logo-first-part">Web</span
             ><span class="logo-footer-part">Studio</span></a
@@ -524,7 +529,7 @@
           </button>
         </form>
       </div>
-    </footer> -->
+    </footer>
     <script src="./modal.js"></script>
   </body>
 </html>
