--- a/index.html
+++ b/index.html
@@ -21,6 +21,61 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="mobile-menu js-menu-container" id="mobile-menu">
+      <button type="button" class="menu-close-btn js-close-menu">
+        <svg width="8px" height="8px" class="modal-icon">
+          <use href="./images/symbol-defs.svg#icon-cross"></use>
+        </svg>
+      </button>
+      <nav>
+        <ul class="mobile-nav-list">
+          <li class="item"><a href="">Studio</a></li>
+          <li class="item"><a href="">Portfolio</a></li>
+          <li class="item"><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address class="mobile-menu-address">
+        <ul>
+          <li class="item">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+          <li class="item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+        </ul>
+      </address>
+
+      <ul class="social-list">
+        <li class="item">
+          <a href="" class="social-link">
+            <svg class="social-icon">
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item">
+          <a href="" class="social-link">
+            <svg class="social-icon">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item">
+          <a href="" class="social-link">
+            <svg class="social-icon">
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item">
+          <a href="" class="social-link">
+            <svg class="social-icon">
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <header class="header">
       <div class="container header-box">
         <nav class="site-nav">
@@ -52,7 +107,12 @@
             </li>
           </ul>
         </address>
-        <button type="button" class="burger-btn">
+        <button
+          type="button"
+          class="burger-btn js-open-menu menu-toggle"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
           <svg class="burger">
             <use
               class="header-icon"
@@ -531,5 +591,6 @@
       </div>
     </footer>
     <script src="./modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
