fixed hero and feature section padding., fixed burger icon and footer  contect position

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </section>
 
-      <section class="section">
+      <section class="section feature-section">
         <div class="container">
           <h2 class="section-title hiden">Features</h2>
           <ul class="feature-list text-padding-reset">
